appId: com.scripturedeepive.app
---
- launchApp
- tapOn: "Search"
- inputText: "covenant"
- assertVisible: "Verses"
